Fix code block overflow

--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -15,6 +15,7 @@ p {
 pre {
   background-color: floralwhite;
   padding: 1rem;
+  overflow: auto;
 }
 
 code {
